--- a/Unit_2/Code_S7/B/Notebook_S7_T2.ipynb
+++ b/Unit_2/Code_S7/B/Notebook_S7_T2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]]\n",
+      "Inversa de A:\n",
+      "[[-2.   1. ]\n",
+      " [ 1.5 -0.5]]\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.array([[1, 2], [3, 4]])\n",
+    "print(A)\n",
     "inversa_A = np.linalg.inv(A)\n",
     "print(\"Inversa de A:\")\n",
     "print(inversa_A)"
@@ -46,12 +59,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Determinante de A: -2\n"
+     ]
+    }
+   ],
    "source": [
     "det_A = np.linalg.det(A)\n",
-    "print(\"Determinante de A:\", det_A)"
+    "print(f\"Determinante de A: {det_A:.0f}\")"
    ]
   },
   {
@@ -66,12 +87,56 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valores propios de A: [-0.37228132  5.37228132]\n",
+      "Vectores propios de A:\n",
+      "[[-0.82456484 -0.41597356]\n",
+      " [ 0.56576746 -0.90937671]]\n"
+     ]
+    }
+   ],
    "source": [
     "eig_values, eig_vectors = np.linalg.eig(A)\n",
     "print(\"Valores propios de A:\", eig_values)\n",
     "print(\"Vectores propios de A:\")\n",
     "print(eig_vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "Valores propios de A: [ 1.61168440e+01 -1.11684397e+00 -9.75918483e-16]\n",
+      "Vectores propios de A:\n",
+      "[[-0.23197069 -0.78583024  0.40824829]\n",
+      " [-0.52532209 -0.08675134 -0.81649658]\n",
+      " [-0.8186735   0.61232756  0.40824829]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "B=np.arange(1,10,1)\n",
+    "print(B)\n",
+    "B=B.reshape(3,3)\n",
+    "print(B)\n",
+    "\n",
+    "eig_values_b, eig_vectors_b = np.linalg.eig(B)\n",
+    "print(\"Valores propios de A:\", eig_values_b)\n",
+    "print(\"Vectores propios de A:\")\n",
+    "print(eig_vectors_b)\n"
    ]
   },
   {
@@ -119,14 +184,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solución del sistema de ecuaciones: [ 0.00000000e+00  1.00000000e+00 -2.67275913e-17]\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.array([[3, 1, 2], [1, 2, 3], [2, 3, 1]])\n",
     "b = np.array([1, 2, 3])\n",
     "x = np.linalg.solve(A, b)\n",
     "print(\"Solución del sistema de ecuaciones:\", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([[5, 1, 2], [1, 6, 3], [2, 3, 1]])\n",
+    "b = np.array([1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.71428571  1.14285714 -1.85714286]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A_inv=np.linalg.inv(A)\n",
+    "\n",
+    "X=np.dot(A_inv,b)\n",
+    "print(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.71428571  1.14285714 -1.85714286]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X=np.linalg.solve(A,b)\n",
+    "print(X)"
    ]
   },
   {
@@ -146,9 +267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transformada de Fourier de la señal: [10.+0.j -2.+2.j -2.+0.j -2.-2.j]\n"
+     ]
+    }
+   ],
    "source": [
     "signal = np.array([1, 2, 3, 4])\n",
     "fft_signal = np.fft.fft(signal)\n",
@@ -165,9 +294,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transformada inversa de Fourier: [1.+0.j 2.+0.j 3.+0.j 4.+0.j]\n"
+     ]
+    }
+   ],
    "source": [
     "ifft_signal = np.fft.ifft(fft_signal)\n",
     "print(\"Transformada inversa de Fourier:\", ifft_signal)"
@@ -190,13 +327,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentil 50 (mediana): 4.5\n"
+     ]
+    }
+   ],
    "source": [
-    "data = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+    "data = np.array([1, 2, 3, 4, 5, 6, 7, 8])\n",
     "percentile_50 = np.percentile(data, 50)\n",
     "print(\"Percentil 50 (mediana):\", percentile_50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "quantile_50 = np.quantile(data, 0.5)\n",
+    "print(quantile_50)"
    ]
   },
   {
@@ -209,12 +372,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz de covarianza:\n",
+      "6.0\n"
+     ]
+    }
+   ],
    "source": [
     "cov_matrix = np.cov(data)\n",
     "print(\"Matriz de covarianza:\")\n",
+    "print(cov_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.5 -2.5]\n",
+      " [-2.5  2.5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data1 = np.array([1, 2, 3, 4, 5])\n",
+    "data2 = np.array([5, 4, 3, 2, 1])\n",
+    "\n",
+    "cov_matrix = np.cov(data1,data2)\n",
     "print(cov_matrix)"
    ]
   },
@@ -228,12 +422,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coeficiente de correlación entre data1 y data2:\n",
+      "[[ 1. -1.]\n",
+      " [-1.  1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "data1 = np.array([1, 2, 3, 4, 5])\n",
     "data2 = np.array([5, 4, 3, 2, 1])\n",
+    "correlation = np.corrcoef(data1, data2)\n",
+    "print(\"Coeficiente de correlación entre data1 y data2:\")\n",
+    "print(correlation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data1 = np.array([1, 2000, 0.33, 45, 3455])\n",
+    "data2 = np.array([5, 4, 3, 2, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coeficiente de correlación entre data1 y data2:\n",
+      "[[ 1.         -0.49814444]\n",
+      " [-0.49814444  1.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
     "correlation = np.corrcoef(data1, data2)\n",
     "print(\"Coeficiente de correlación entre data1 y data2:\")\n",
     "print(correlation)"
@@ -256,11 +491,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.000e+00 2.000e+03 3.300e-01 4.500e+01 3.455e+03]\n",
+      "Gradiente del array: [ 1.999000e+03 -3.350000e-01 -9.775000e+02  1.727335e+03  3.410000e+03]\n"
+     ]
+    }
+   ],
    "source": [
-    "gradient = np.gradient(data)\n",
+    "print(data1)\n",
+    "gradient = np.gradient(data1)\n",
     "print(\"Gradiente del array:\", gradient)"
    ]
   },
@@ -274,11 +519,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Diferencias entre elementos consecutivos: [ 1999.   -1999.67    44.67  3410.  ]\n"
+     ]
+    }
+   ],
    "source": [
-    "differences = np.diff(data)\n",
+    "differences = np.diff(data1)\n",
     "print(\"Diferencias entre elementos consecutivos:\", differences)"
    ]
   },
@@ -294,12 +547,154 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Área bajo la curva: 15.5\n"
+     ]
+    }
+   ],
    "source": [
     "y = np.array([1, 3, 7, 10])\n",
     "x = np.array([0, 1, 2, 3])\n",
-    "area = np.trapz(y, x)\n",
+    "area = np.trapezoid(y, x)\n",
     "print(\"Área bajo la curva:\", area)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  4  9 16]\n",
+      "[ 1  8 27 64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def square (x): #Todo: Funcion \n",
+    "    return x ** 2\n",
+    "vectorized_square = np. vectorize ( square )\n",
+    "data = np. array ([1 , 2, 3, 4])\n",
+    "result = vectorized_square ( data )\n",
+    "print ( result )\n",
+    "\n",
+    "\n",
+    "\n",
+    "def cubic (x): #Todo: Funcion \n",
+    "    return x ** 3\n",
+    "\n",
+    "vectorized_cubic = np. vectorize ( cubic )\n",
+    "data = np. array ([1 , 2, 3, 4])\n",
+    "result = vectorized_cubic ( data )\n",
+    "print ( result )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5. 15.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np. array ([0 , 1, 2])\n",
+    "y = np. array ([0 , 10, 20])\n",
+    "\n",
+    "x_new = np. array ([0.5 , 1.5])\n",
+    "\n",
+    "y_new = np.interp (x_new , x, y)\n",
+    "\n",
+    "print ( y_new )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.75164068  1.31217283 -1.71323641]\n",
+      " [ 0.44682484  1.81563289 -1.26169734]\n",
+      " [ 0.14543517 -0.81452613  1.50989248]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "normal_data = np. random . randn (3, 3)\n",
+    "print ( normal_data )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.  -0.5  0.   0.5  1. ]\n",
+      "[-1.  -0.5  0.   0.5  1. ]\n",
+      "X: [[-1.  -0.5  0.   0.5  1. ]\n",
+      " [-1.  -0.5  0.   0.5  1. ]\n",
+      " [-1.  -0.5  0.   0.5  1. ]\n",
+      " [-1.  -0.5  0.   0.5  1. ]\n",
+      " [-1.  -0.5  0.   0.5  1. ]]\n",
+      "Y: [[-1.  -1.  -1.  -1.  -1. ]\n",
+      " [-0.5 -0.5 -0.5 -0.5 -0.5]\n",
+      " [ 0.   0.   0.   0.   0. ]\n",
+      " [ 0.5  0.5  0.5  0.5  0.5]\n",
+      " [ 1.   1.   1.   1.   1. ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np. linspace (-1, 1, 5)\n",
+    "\n",
+    "print(x)\n",
+    "\n",
+    "y = np. linspace (-1, 1, 5)\n",
+    "print(y)\n",
+    "X, Y = np. meshgrid (x, y)\n",
+    "print (\"X:\", X)\n",
+    "print (\"Y:\", Y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3 4]\n",
+      " [6 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v1 = np. array ([1 , 2])\n",
+    "v2 = np. array ([3 , 4])\n",
+    "outer_product = np. outer (v1 , v2)\n",
+    "print ( outer_product )"
    ]
   },
   {
@@ -313,7 +708,7 @@
     "2. Calcule la inversa de la matriz A.\n",
     "3. Cree un vector b de tamaño 4 con valores aleatorios enteros entre 1 y 10.\n",
     "4. Resuelva el sistema de ecuaciones Ax = b.\n",
-    "5. Realice la descomposición en valores singulares (SVD) de la matriz A."
+    "5. Realice la descomposición en valores singulares (SVD) de la matriz A. y explicar que hace, puntos extra"
    ]
   }
  ],
