--- a/Unit_2/Code_S5/TS5_A.ipynb
+++ b/Unit_2/Code_S5/TS5_A.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "(395, 33)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,30 +354,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1. 1. 3. 1. 2. 2. 1. 1. 1. 1. 2. 1. 3. 2. 1. 2. 2. 1. 4. 3. 1. 1. 3. 4.\n",
-      " 1. 3. 2. 4. 1. 5. 4. 1. 1. 1. 1. 1. 1. 1. 1. 1. 2. 4. 1. 1. 2. 1. 4. 1.\n",
-      " 2. 1. 3. 1. 4. 3. 4. 1. 1. 1. 1. 1. 3. 5. 1. 4. 4. 2. 5. 2. 3. 3. 1. 1.\n",
-      " 4. 2. 4. 3. 1. 3. 1. 2. 3. 2. 1. 3. 3. 3. 2. 3. 1. 5. 3. 3. 3. 1. 1. 1.\n",
-      " 1. 1. 2. 1. 5. 1. 1. 1. 1. 1. 1. 1. 5. 1. 1. 1. 1. 1. 1. 2. 1. 1. 4. 2.\n",
-      " 2. 2. 2. 4. 1. 2. 1. 1. 2. 5. 2. 2. 3. 4. 1. 1. 4. 1. 3. 1. 1. 2. 1. 3.\n",
-      " 2. 2. 1. 1. 1. 5. 5. 5. 3. 1. 1. 1. 3. 5. 2. 4. 2. 4. 4. 4. 5. 1. 4. 1.\n",
-      " 1. 1. 4. 1. 3. 1. 1. 4. 4. 4. 4. 1. 3. 2. 3. 3. 2. 3. 2. 2. 3. 5. 1. 1.\n",
-      " 5. 4. 1. 1. 2. 5. 3. 2. 5. 3. 3. 2. 1. 4. 2. 1. 4. 1. 2. 5. 1. 4. 2. 3.\n",
-      " 4. 4. 4. 1. 2. 1. 1. 5. 1. 1. 3. 3. 5. 2. 2. 1. 3. 4. 1. 3. 5. 1. 1. 5.\n",
-      " 4. 3. 1. 2. 1. 1. 1. 5. 3. 4. 4. 3. 5. 3. 4. 2. 1. 1. 2. 1. 3. 1. 1. 1.\n",
-      " 1. 4. 4. 2. 3. 2. 3. 3. 1. 2. 1. 3. 1. 4. 1. 2. 4. 4. 1. 1. 2. 2. 2. 1.\n",
-      " 3. 1. 4. 2. 1. 1. 1. 3. 3. 2. 1. 2. 1. 2. 1. 2. 1. 1. 1. 1. 2. 3. 2. 1.\n",
-      " 2. 2. 1. 1. 2. 1. 5. 3. 2. 1. 2. 3. 3. 2. 5. 5. 3. 2. 4. 1. 1. 1. 1. 3.\n",
-      " 2. 3. 1. 3. 3. 2. 3. 2. 2. 3. 2. 3. 3. 5. 3. 3. 3. 3. 3. 1. 2. 2. 2. 1.\n",
-      " 4. 3. 3. 1. 2. 4. 2. 2. 2. 2. 1. 3. 1. 3. 1. 2. 1. 4. 2. 3. 4. 3. 1. 3.\n",
-      " 3. 3. 2. 2. 1. 1. 5. 4. 3. 4. 3.]\n",
+      "[[4. 3. 4. 1.]\n",
+      " [5. 3. 3. 1.]\n",
+      " [4. 3. 2. 2.]\n",
+      " ...\n",
+      " [5. 5. 3. 3.]\n",
+      " [4. 4. 1. 3.]\n",
+      " [3. 2. 3. 3.]]\n",
       "[1. 1. 2. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 2. 1. 1. 1. 1. 2.\n",
       " 1. 1. 1. 2. 1. 5. 3. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 2. 1. 1. 2. 1. 1. 1.\n",
       " 2. 1. 2. 1. 3. 2. 4. 1. 1. 1. 1. 1. 2. 5. 1. 2. 2. 1. 5. 1. 1. 2. 1. 1.\n",
@@ -399,7 +389,7 @@
     }
    ],
    "source": [
-    "walc=datos_csv[:,-6]\n",
+    "walc=datos_csv[:,-10:-6]\n",
     "print(walc)\n",
     "\n",
     "\n",
