--- a/Classifier/Knn-Classifier_Supervised.ipynb
+++ b/Classifier/Knn-Classifier_Supervised.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,9 +63,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clases únicas: ['Iris-setosa' 'Iris-versicolor' 'Iris-virginica']\n",
+      "Clases codificadas: [0 0 0 0 0]\n",
+      "\n",
+      "Características:\n",
+      "[[5.1 3.5 1.4 0.2]\n",
+      " [4.9 3.  1.4 0.2]\n",
+      " [4.7 3.2 1.3 0.2]\n",
+      " [4.6 3.1 1.5 0.2]\n",
+      " [5.  3.6 1.4 0.2]]\n",
+      "\n",
+      "Clases codificadas:\n",
+      "[0 0 0 0 0]\n"
+     ]
+    }
+   ],
    "source": [
     "features, encoded_classes =load_iris_dataset_csv()"
    ]
@@ -82,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +139,7 @@
    ],
    "source": [
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, encoded_classes)\n",
     "print(\"\\nTamaño del conjunto de entrenamiento:\", X_train.shape[0])\n",
     "print(\"Tamaño del conjunto de prueba:\", X_test.shape[0])"
    ]
@@ -139,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
