--- a/Unit_4/Week_13/A/FR/Mamdani_System.ipynb
+++ b/Unit_4/Week_13/A/FR/Mamdani_System.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
     "        numerator = np.sum(universe * aggregated_mf)\n",
     "        denominator = np.sum(aggregated_mf)\n",
     "        print(f\"Numerador: {numerator}, Denominador: {denominator}\")\n",
-    "        return numerator / denominator if denominator != 0 else 0, aggregated_mf\n",
+    "        return numerator / denominator if denominator != 0 else 0\n",
     "\n",
     "    def simulate(self, inputs):\n",
     "        \"\"\"\n",
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -682,31 +682,7 @@
       " 1.41414141e-01 1.21212121e-01 1.01010101e-01 8.08080808e-02\n",
       " 6.06060606e-02 4.04040404e-02 2.02020202e-02 0.00000000e+00]\n",
       "Numerador: 927.9666731927392, Denominador: 12.373740714124914\n",
-      "Salida crisp (Fan Speed): (np.float64(74.99483742482526), array([0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
-      "       0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
-      "       0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
-      "       0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
-      "       0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
-      "       0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
-      "       0.00000000e+00, 2.72684697e-09, 1.36342349e-08, 2.45416228e-08,\n",
-      "       3.54490107e-08, 4.63563985e-08, 5.72637864e-08, 6.81711743e-08,\n",
-      "       7.90785622e-08, 8.99859501e-08, 1.00893338e-07, 1.11800726e-07,\n",
-      "       1.22708114e-07, 1.33615502e-07, 1.44522890e-07, 1.55430277e-07,\n",
-      "       1.66337665e-07, 1.77245053e-07, 1.88152441e-07, 1.99059829e-07,\n",
-      "       2.09967217e-07, 2.20874605e-07, 2.31781993e-07, 2.42689381e-07,\n",
-      "       2.53596768e-07, 2.64504156e-07, 1.01010101e-02, 3.03030303e-02,\n",
-      "       5.05050505e-02, 7.07070707e-02, 9.09090909e-02, 1.11111111e-01,\n",
-      "       1.31313131e-01, 1.51515152e-01, 1.71717172e-01, 1.91919192e-01,\n",
-      "       2.12121212e-01, 2.32323232e-01, 2.52525253e-01, 2.72727273e-01,\n",
-      "       2.92929293e-01, 3.13131313e-01, 3.33333333e-01, 3.53535354e-01,\n",
-      "       3.73737374e-01, 3.93939394e-01, 4.14141414e-01, 4.34343434e-01,\n",
-      "       4.54545455e-01, 4.74747475e-01, 4.94949495e-01, 4.84848485e-01,\n",
-      "       4.64646465e-01, 4.44444444e-01, 4.24242424e-01, 4.04040404e-01,\n",
-      "       3.83838384e-01, 3.63636364e-01, 3.43434343e-01, 3.23232323e-01,\n",
-      "       3.03030303e-01, 2.82828283e-01, 2.62626263e-01, 2.42424242e-01,\n",
-      "       2.22222222e-01, 2.02020202e-01, 1.81818182e-01, 1.61616162e-01,\n",
-      "       1.41414141e-01, 1.21212121e-01, 1.01010101e-01, 8.08080808e-02,\n",
-      "       6.06060606e-02, 4.04040404e-02, 2.02020202e-02, 0.00000000e+00]))\n"
+      "Salida crisp (Fan Speed): 74.99483742482526\n"
      ]
     }
    ],
@@ -721,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -804,26 +780,7 @@
       " 0.         0.         0.         0.         0.         0.\n",
       " 0.         0.         0.         0.        ]\n",
       "Numerador: 531.541074455106, Denominador: 14.24801171518343\n",
-      "Salida crisp (Fan Speed): (np.float64(37.30633333833295), array([0.        , 0.01346801, 0.02693603, 0.04040404, 0.05387205,\n",
-      "       0.06734007, 0.08080808, 0.09427609, 0.10774411, 0.12121212,\n",
-      "       0.13468013, 0.14814815, 0.16161616, 0.17508418, 0.18855219,\n",
-      "       0.2020202 , 0.21548822, 0.22895623, 0.24242424, 0.25589226,\n",
-      "       0.26936027, 0.28282828, 0.2962963 , 0.30976431, 0.32323232,\n",
-      "       0.32996633, 0.31649832, 0.3030303 , 0.28956229, 0.27609428,\n",
-      "       0.26262626, 0.24915825, 0.23569024, 0.22222222, 0.20875421,\n",
-      "       0.1952862 , 0.18181818, 0.16835017, 0.17380385, 0.18692112,\n",
-      "       0.20003839, 0.21315566, 0.22627293, 0.2393902 , 0.25250747,\n",
-      "       0.26562475, 0.27874202, 0.29185929, 0.30497656, 0.31809383,\n",
-      "       0.31809383, 0.30497656, 0.29185929, 0.27874202, 0.26562475,\n",
-      "       0.25250747, 0.2393902 , 0.22627293, 0.21315566, 0.20003839,\n",
-      "       0.18692112, 0.17380385, 0.16068657, 0.1475693 , 0.13445203,\n",
-      "       0.12133476, 0.10821749, 0.09510022, 0.08198295, 0.06886567,\n",
-      "       0.0557484 , 0.04263113, 0.02951386, 0.01639659, 0.00327932,\n",
-      "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-      "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-      "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-      "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-      "       0.        , 0.        , 0.        , 0.        , 0.        ]))\n"
+      "Salida crisp (Fan Speed): 37.30633333833295\n"
      ]
     }
    ],
@@ -835,16 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(agr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -885,26 +833,7 @@
       " 0.18181818 0.16161616 0.14141414 0.12121212 0.1010101  0.08080808\n",
       " 0.06060606 0.04040404 0.02020202 0.        ]\n",
       "Numerador: 1179.5617037156014, Denominador: 17.971461835627018\n",
-      "Salida crisp (Fan Speed): (np.float64(65.63526743145694), array([0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-      "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-      "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-      "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-      "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-      "       0.00327932, 0.01639659, 0.02951386, 0.04263113, 0.0557484 ,\n",
-      "       0.06886567, 0.08198295, 0.09510022, 0.10821749, 0.12133476,\n",
-      "       0.13445203, 0.1475693 , 0.16068657, 0.17380385, 0.18692112,\n",
-      "       0.20003839, 0.21315566, 0.22627293, 0.2393902 , 0.25250747,\n",
-      "       0.26562475, 0.27874202, 0.29185929, 0.30497656, 0.31809383,\n",
-      "       0.31809383, 0.30497656, 0.29185929, 0.27874202, 0.26562475,\n",
-      "       0.25250747, 0.2393902 , 0.22627293, 0.21315566, 0.20003839,\n",
-      "       0.21212121, 0.23232323, 0.25252525, 0.27272727, 0.29292929,\n",
-      "       0.31313131, 0.33333333, 0.35353535, 0.37373737, 0.39393939,\n",
-      "       0.41414141, 0.43434343, 0.45454545, 0.47474747, 0.49494949,\n",
-      "       0.48484848, 0.46464646, 0.44444444, 0.42424242, 0.4040404 ,\n",
-      "       0.38383838, 0.36363636, 0.34343434, 0.32323232, 0.3030303 ,\n",
-      "       0.28282828, 0.26262626, 0.24242424, 0.22222222, 0.2020202 ,\n",
-      "       0.18181818, 0.16161616, 0.14141414, 0.12121212, 0.1010101 ,\n",
-      "       0.08080808, 0.06060606, 0.04040404, 0.02020202, 0.        ]))\n"
+      "Salida crisp (Fan Speed): 65.63526743145694\n"
      ]
     }
    ],
